# gpxtool

./: README.md  pyproject.toml
planning-docs/: decision-log.md  initial-plan.md
src/gpx_tool/: __init__.py  cli.py  core.py  operations.py
tests/: test_operations.py
